Fix bug #25825. tzset() was not called when resetting the TZ env var. In addition, fix a slight error (made by sniper!) which would trigger tzset() to be called for any env var beginning with TZ, and not just TZ itself.